@@ -2,20 +2,18 @@
 name: virtual-threads-patterns
 description: Project Loom virtual threads, structured concurrency, carrier thread pinning avoidance, and I/O-bound workload patterns for Java 21+.
 origin: ECC
+model: sonnet
 ---
 
 # Virtual Threads Patterns (Java 21+ LTS, stable since Sept 2023)
 
 ## When to Activate
 
-- Building I/O-heavy applications (web servers, microservices handling thousands of concurrent requests)
-- Migrating from thread pool executors to virtual thread executors
-- Designing structured concurrency with `StructuredTaskScope` (Java 21+, finalized in Java 23)
-- Optimizing Spring Boot 3.2+ applications for high throughput
-- Avoiding carrier thread pinning issues in blocking JNI or synchronized blocks
-- Measuring virtual thread performance vs traditional platform threads
+- Building I/O-heavy applications (10,000+ concurrent requests)
+- Migrating from fixed thread pools to unlimited concurrency
+- Optimizing Spring Boot 3.2+ with structured concurrency
 
-**Minimum JVM**: Java 21 LTS (Sept 2023). Java 23+ recommended for finalized StructuredTaskScope APIs.
+**Minimum JVM**: Java 21 LTS. Java 23+ recommended for finalized StructuredTaskScope.
 
 ## Core Concept 1: Virtual Threads vs Platform Threads
 
@@ -33,18 +31,7 @@ origin: ECC
 - Supports millions of concurrent virtual threads
 - Excellent for I/O-bound work (network, database, files)
 
-### When to Use Virtual Threads
-- REST APIs handling 10,000+ concurrent requests
-- Microservices awaiting external API responses
-- Database connection handling
-- File system operations (reading/writing)
-- Network I/O (HTTP clients)
-
-### When NOT to Use Virtual Threads
-- CPU-bound algorithms (heavy computation)
-- Real-time systems with strict latency guarantees
-- Code heavily reliant on ThreadLocal variables
-- JNI code that blocks (pins carrier threads)
+Use for: REST APIs, microservices, database/file/network I/O. **Not** for CPU-bound algorithms or code heavily reliant on ThreadLocal.
 
 ## Core Concept 2: Creating and Running Virtual Threads
 
@@ -130,13 +117,11 @@ public class NamedVirtualThreads {
 }
 ```
 
-## Core Concept 3: Structured Concurrency with StructuredTaskScope\n\nStructured concurrency ensures all spawned threads complete before a scope exits. Prevents resource leaks and orphaned threads.
-
-**API Status**: Preview in Java 19-20, finalized in Java 21 LTS. Full stable API (no --enable-preview) in Java 23+.\n\n**API Status**: Preview in Java 19-20, finalized in Java 21 LTS. Full stable API (no --enable-preview) in Java 23+.\n\n## Placeholder
+## Core Concept 3: Structured Concurrency with StructuredTaskScope
 
 Structured concurrency ensures all spawned threads complete before a scope exits. Prevents resource leaks and orphaned threads.
 
-**API Status**: Preview in Java 19-20, finalized in Java 21 LTS. Full stable API (no --enable-preview) in Java 23+.
+**API Status**: Stable in Java 21 LTS. Finalized in Java 23+.
 
 ### Pattern 4: Fork-Join with Structured Task Scope
 
@@ -228,32 +213,9 @@ public class StructuredErrorHandling {
 
 When a virtual thread blocks inside a `synchronized` block or blocking JNI call, it **pins** its carrier thread. This prevents the JVM scheduler from moving other virtual threads to that carrier, reducing throughput.
 
-### Anti-Pattern 1: Synchronized Blocks Pin Carrier Threads
+### Anti-Pattern: Synchronized Blocks Pin Carrier Threads
 
-```java
-// BAD: Synchronized methods pin carrier threads
-public class PinnedThreadExample {
-
-    private int counter = 0;
-
-    // This blocks the carrier thread while holding monitor
-    public synchronized void increment() {
-        counter++;
-        try {
-            Thread.sleep(100);  // PINS carrier thread; no other virtual threads run
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-    }
-
-    // Virtual thread calling this will pin its carrier
-    public void badConcurrency() throws InterruptedException {
-        Thread vthread = Thread.ofVirtual()
-            .start(this::increment);
-        vthread.join();
-    }
-}
-```
+Synchronized methods block the carrier thread while holding the monitor. Use `ReentrantLock` instead.
 
 ### Pattern 6: ReentrantLock Instead of Synchronized
 
@@ -292,31 +254,6 @@ public class NonPinningExample {
 }
 ```
 
-### Pattern 7: Avoiding JNI Blocking
-
-```java
-public class JNIBlocking {
-
-    private native void nativeBlockingCall();  // This blocks carrier thread
-
-    // WRONG: Don't call blocking JNI from virtual thread
-    public void badNativeCall() {
-        nativeBlockingCall();  // Pins carrier thread
-    }
-
-    // BETTER: Use dedicated platform thread pool for blocking JNI
-    private static final ExecutorService nativeExecutor =
-        Executors.newFixedThreadPool(10);  // Platform threads only
-
-    public void goodNativeCall() throws Exception {
-        Future<Void> result = nativeExecutor.submit(() -> {
-            nativeBlockingCall();  // Runs on platform thread, doesn't pin virtual
-            return null;
-        });
-        result.get();
-    }
-}
-```
 
 ## Core Concept 5: Spring Boot 3.2+ Virtual Thread Integration
 
@@ -343,8 +280,7 @@ public class VirtualThreadConfig {
     tomcatCustomizer() {
         return factory -> {
             factory.setProtocol("org.apache.coyote.http11.Http11NioProtocol");
-            // Virtual threads enabled automatically if on Java 21+
-        };
+            };
     }
 }
 ```
@@ -374,7 +310,6 @@ public class VirtualThreadController {
      */
     @GetMapping("/data/{id}")
     public DataResponse getData(@PathVariable int id) throws Exception {
-        // Simulate fetching from multiple services
         HttpRequest request = HttpRequest.newBuilder()
             .uri(new java.net.URI("https://api.example.com/user/" + id))
             .GET()
@@ -449,39 +384,6 @@ try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
 }
 ```
 
-### Pattern 11: Monitoring Virtual Thread Creation
-
-```java
-import java.util.concurrent.*;
-import java.lang.management.*;
-
-public class VirtualThreadMonitoring {
-
-    public static void main(String[] args) throws Exception {
-        ThreadMXBean threadMxBean = ManagementFactory.getThreadMXBean();
-
-        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            for (int i = 0; i < 1000; i++) {
-                executor.submit(() -> {
-                    try {
-                        Thread.sleep(1000);
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                    }
-                });
-            }
-
-            // Platform threads: few (e.g., 8 for 8-core CPU)
-            // Virtual threads: 1000+
-            System.out.println("Platform threads: " + threadMxBean.getThreadCount());
-            System.out.println("Peak threads: " + threadMxBean.getPeakThreadCount());
-
-            executor.shutdown();
-            executor.awaitTermination(2, TimeUnit.SECONDS);
-        }
-    }
-}
-```
 
 ## Core Concept 7: ThreadLocal Considerations
 
@@ -512,196 +414,36 @@ public class ScopedValueExample {
 }
 ```
 
-## Anti-Patterns
+## Anti-Patterns to Avoid
 
-### WRONG: Blocking I/O Without Virtual Threads
+**CPU-bound work**: Virtual threads provide no benefit for heavy computation — use platform threads or ForkJoinPool instead.
 
+**Synchronized blocks**: Pin carrier threads. Use `ReentrantLock` instead (released during I/O waits).
+
+**Heavy ThreadLocal**: Millions of virtual threads + ThreadLocal = memory leak. Use `ScopedValue` for auto-cleanup per scope.
+
+**Unbounded thread creation**: `for (int i = 0; i < 1_000_000; i++) Thread.ofVirtual().start(...)` causes memory exhaustion. Use executors with bounded queues.
+
+**Blocking JNI**: Native calls pin carrier threads. Isolate blocking JNI in a dedicated `newFixedThreadPool(10)` instead.
+
+## Monitoring and Debugging
+
+Enable JVM flags to detect pinning:
 ```java
-// ANTI-PATTERN: Platform threads with blocking pool (thousands limit)
-ExecutorService executor = Executors.newFixedThreadPool(100);
-
-for (int i = 0; i < 10000; i++) {
-    executor.submit(() -> {
-        // Only 100 tasks run concurrently
-        // Remaining 9900 queue and wait (high latency)
-        makeHttpRequest();
-    });
-}
-```
-
-### CORRECT: Virtual Threads for I/O
-
-```java
-// CORRECT: Virtual threads (unlimited concurrency)
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 10000; i++) {
-        executor.submit(() -> {
-            // All 10000 tasks run concurrently (low latency)
-            makeHttpRequest();
-        });
-    }
-}
-```
-
-### WRONG: Synchronized Blocks with Virtual Threads
-
-```java
-// ANTI-PATTERN: Synchronized pinning carrier threads
-public synchronized void criticalSection() {
-    try {
-        Thread.sleep(1000);  // Holds lock AND pins carrier (bad)
-    } catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
-    }
-}
-```
-
-### CORRECT: ReentrantLock with Virtual Threads
-
-```java
-// CORRECT: Lock that doesn't pin
-private final ReentrantLock lock = new ReentrantLock();
-
-public void criticalSection() {
-    lock.lock();
-    try {
-        Thread.sleep(1000);  // Releases carrier thread while holding lock
-    } finally {
-        lock.unlock();
-    }
-}
-```
-
-### WRONG: Heavy ThreadLocal Usage
-
-```java
-// ANTI-PATTERN: Millions of virtual threads + ThreadLocal = memory leak
-ThreadLocal<ExpensiveResource> resource = new ThreadLocal<>();
-
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 1_000_000; i++) {
-        executor.submit(() -> {
-            resource.set(new ExpensiveResource());  // Accumulates in memory
-            // ... use resource
-        });
-    }
-}
-```
-
-### CORRECT: ScopedValue or Explicit Cleanup
-
-```java
-// CORRECT: ScopedValue is auto-cleaned per scope
-private static final ScopedValue<ExpensiveResource> resource =
-    ScopedValue.newInstance();
-
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 1_000_000; i++) {
-        executor.submit(() -> {
-            ScopedValue.callWhere(resource, new ExpensiveResource(), () -> {
-                // ... use resource; auto-cleaned when scope exits
-            });
-        });
-    }
-}
-```
-
-## Best Practices
-
-### Do This
-
-```java
-// GOOD: Virtual threads for I/O-bound work
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    for (int i = 0; i < 10000; i++) {
-        executor.submit(() -> performIoOperation());
-    }
-    executor.shutdown();
-    executor.awaitTermination(1, TimeUnit.HOURS);
-}
-
-// GOOD: Structured concurrency ensures cleanup
-try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-    var task1 = scope.fork(() -> fetchData());
-    var task2 = scope.fork(() -> fetchMetadata());
-
-    scope.joinUntilComplete();
-    scope.throwIfFailed();
-
-    return combine(task1.resultNow(), task2.resultNow());
-}
-
-// GOOD: ReentrantLock for synchronization
-private final ReentrantLock lock = new ReentrantLock();
-
-public void criticalSection() {
-    lock.lock();
-    try {
-        // Critical work without pinning
-    } finally {
-        lock.unlock();
-    }
-}
-
-// GOOD: Monitor virtual thread behavior
 System.setProperty("jdk.tracePinnedThreads", "short");
 System.setProperty("jdk.traceVirtualThreadEvents", "true");
 ```
 
-### Don't Do This
+## Compatibility
 
-```java
-// BAD: CPU-bound work on virtual threads (no benefit)
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    executor.submit(() -> performExpensiveComputation());  // Waste
-}
+| Java Version | Virtual Threads | StructuredTaskScope | Scoped Values |
+|---|---|---|---|
+| Java 21 LTS | ✓ stable | ✓ stable | ✓ stable |
+| Java 23+ | ✓ stable | ✓ finalized | ✓ finalized |
 
-// BAD: Synchronized blocks (pins carrier threads)
-public synchronized void process() {
-    try {
-        Thread.sleep(1000);  // PINS
-    } catch (InterruptedException e) {}
-}
+**Recommendation**: Target Java 21 LTS for production.
 
-// BAD: Blocking JNI calls (pins carrier threads)
-public void callNative() {
-    nativeBlockingMethod();  // PINS
-}
+## Related Skills
 
-// BAD: Unbounded virtual thread creation
-for (int i = 0; i < 1_000_000; i++) {
-    Thread.ofVirtual().start(() -> {}); // Memory exhaustion
-}
-
-// BAD: Heavy ThreadLocal (memory leak risk)
-ThreadLocal<byte[]> buffer = new ThreadLocal<>();
-for (int i = 0; i < 1_000_000; i++) {
-    executor.submit(() -> {
-        buffer.set(new byte[1_000_000]);  // Accumulates
-    });
-}
-```
-
-## Compatibility Matrix
-
-| Java Version | Virtual Threads | StructuredTaskScope | Scoped Values | Status |
-|--------------|-----------------|---------------------|---------------|--------|
-| Java 19-20   | ✓ (preview)     | ✓ (preview)        | ✓ (preview)   | Deprecated |
-| Java 21 LTS  | ✓ (stable)      | ✓ (stable)         | ✓ (stable)    | **Current LTS** |
-| Java 22      | ✓ (stable)      | ✓ (stable)         | ✓ (stable)    | Short-term |
-| Java 23      | ✓ (stable)      | ✓ (finalized)      | ✓ (finalized) | Current |
-| Java 24+     | ✓ (stable)      | ✓ (stable)         | ✓ (stable)    | Future releases |
-
-**Recommendation**: Target Java 21 LTS for production; test against Java 23+ for latest APIs.
-
-## Agent Support
-
-- **java-architect** — Java 21+ architecture and patterns
-- **springboot-patterns** — Spring Boot 3.2+ virtual thread integration
-- **jvm-advanced** — Benchmarking and profiling virtual threads
-
-## Skill References
-
-- **springboot-patterns** — Virtual thread configuration in Spring Boot
-- **java-locks** — ReentrantLock, ReadWriteLock, and lock-free synchronization
-- **async-patterns** — Comparison with CompletableFuture and reactive streams
+- **springboot-patterns** — Virtual thread configuration
+- **springboot-reactive** — Spring WebFlux and non-blocking I/O
